# AFPiBenchmark

./: .gitattributes  .gitignore  .gitmodules  AFPiBenchMark.cpp  AFPiBenchMark.h  BenchmarkTest.cpp  BenchmarkTest.h  CMakeLists.txt  build.sh  buildAndPackage.sh  installAF.sh  installBuildRun.sh  main.cpp  readme.md  runAll.sh
af-lib/LICENSES/: Apache-2.0.txt  BSD 3-Clause.txt  FreeImage Public License.txt  Half(MIT) License.txt  ISSL License.txt  OpenSIFT License.txt  zlib-libpng License.txt
af-lib/etc/: arrayfire_version.txt
af-lib/include/: arrayfire.h
af-lib/include/af/: algorithm.h  arith.h  array.h  backend.h  blas.h  compatible.h  compilers.h  complex.h  constants.h  cuda.h  data.h  defines.h  device.h  dim4.hpp  event.h  exception.h  features.h  gfor.h  graphics.h  half.h  image.h  index.h  internal.h  lapack.h  macros.h  memory.h  ml.h  oneapi.h  opencl.h  random.h  seq.h  signal.h  sparse.h  statistics.h  timing.h  traits.hpp  util.h  version.h  vision.h
af-lib/lib/: libaf.debug  libaf.so.3  libaf.so.3.9.0  libafcpu.debug  libafcpu.so.3  libafcpu.so.3.9.0  libafcuda.debug  libafcuda.so.3  libafcuda.so.3.9.0  libspdlog.so.1.9.2
af-lib/share/ArrayFire/cmake/: ArrayFireCPUTargets-release.cmake  ArrayFireCPUTargets.cmake  ArrayFireCUDATargets-release.cmake  ArrayFireCUDATargets.cmake  ArrayFireConfig.cmake  ArrayFireConfigVersion.cmake  ArrayFireUnifiedTargets-release.cmake  ArrayFireUnifiedTargets.cmake
af-lib/share/ArrayFire/examples/: .clang-format  CMakeLists.txt  README.md
af-lib/share/ArrayFire/examples/benchmarks/: CMakeLists.txt  blas.cpp  cg.cpp  fft.cpp  pi.cpp
af-lib/share/ArrayFire/examples/common/: idxio.h  progress.h
af-lib/share/ArrayFire/examples/computer_vision/: CMakeLists.txt  fast.cpp  harris.cpp  matching.cpp  susan.cpp
af-lib/share/ArrayFire/examples/financial/: CMakeLists.txt  black_scholes_options.cpp  heston_model.cpp  input.h  monte_carlo_options.cpp
af-lib/share/ArrayFire/examples/getting_started/: CMakeLists.txt  convolve.cpp  integer.cpp  rainfall.cpp  vectorize.cpp
af-lib/share/ArrayFire/examples/graphics/: CMakeLists.txt  conway.cpp  conway_pretty.cpp  field.cpp  fractal.cpp  gravity_sim.cpp  gravity_sim_init.h  histogram.cpp  plot2d.cpp  plot3.cpp  surface.cpp
af-lib/share/ArrayFire/examples/helloworld/: CMakeLists.txt  helloworld.cpp
af-lib/share/ArrayFire/examples/image_processing/: CMakeLists.txt  adaptive_thresholding.cpp  binary_thresholding.cpp  brain_segmentation.cpp  confidence_connected_components.cpp  deconvolution.cpp  edge.cpp  filters.cpp  gradient_diffusion.cpp  image_demo.cpp  image_editing.cpp  morphing.cpp  optical_flow.cpp  pyramids.cpp
af-lib/share/ArrayFire/examples/images/: README.md  circle_center.ppm  circle_left.ppm
af-lib/share/ArrayFire/examples/lin_algebra/: CMakeLists.txt  cholesky.cpp  lu.cpp  (+2 more)
(+19 files in other folders)
